# LHCompas_2024

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mlflow  Dockerfile.pytorch  README.md  docker-compose.yml  launch.sh  prediction.py
.github/workflows/: black.yml
compas/: README.md  pyproject.toml
compas/compas/: f.py
compas/compas/config/: config.py
compas/compas/data_providers/: __init__.py  datamodule.py  dataset.py
compas/compas/inference/: __init__.py  forecast.py
compas/compas/models/: CNN.py  DLinear.py  GRU.py  LSTM.py  PatchTST.py  __init__.py  cnn.py
compas/compas/trainers/: CNN.py  DLinear.py  GRU.py  LSTM.py  __init__.py  cnn.py
compas/experiments/: run_CNN.py  run_DLinear.py  run_Exp.py  run_GRU.py  run_LSTM.py  run_cnn.py
compas/experiments/config/: cnn.yaml  dlinear.yaml  gru.yaml  lstm.yaml  train_example.yaml
notebooks/: 15_PatchTST_a_new_transformer_for_LTSF.ipynb  1d_cnn.ipynb  seq2seq.ipynb
