[tool.poetry]
name = "compas"
version = "0.1.0"
description = ""
authors = ["cwwojin <cwwojin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
torch = "^2.3.1"
lightning = "^2.3.3"
yacs = "^0.1.8"
mlflow = "^2.14.2"
databricks-sdk = "^0.29.0"
scikit-learn = "^1.5.1"
charset-normalizer = "^3.3.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
