[tool.poetry]
name = "compas"
version = "0.1.0"
description = "Trainer for LH-COMPAS competition"
authors = ["cwwojin <cwwojin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
yacs = "^0.1.8"
charset-normalizer = "3.3.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
lightning = "^2.3.3"
mlflow = "^2.14.3"
databricks-sdk = "^0.29.0"
tensorboard = "^2.17.0"
tensorboardx = "^2.6.2.2"
boto3 = "^1.34.146"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
